<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_music">

    <fragment
        android:id="@+id/navigation_music"
        android:name="com.xiao.musicplayer.ui.player.PlayerFragment"
        android:label="@string/title_player"
        tools:layout="@layout/fragment_player" />

    <fragment
        android:id="@+id/navigation_music_list"
        android:name="com.xiao.musicplayer.ui.musiclists.MusicListFragment"
        android:label="@string/title_music_list"
        tools:layout="@layout/fragment_music_list" />

    <fragment
        android:id="@+id/navigation_functions"
        android:name="com.xiao.musicplayer.ui.functions.FunctionsFragment"
        android:label="@string/title_function"
        tools:layout="@layout/fragment_functions" />

    <fragment
        android:id="@+id/navigation_my_information"
        android:name="com.xiao.musicplayer.ui.my_information.MyImformationFragment"
        android:label="@string/title_my_info"
        tools:layout="@layout/fragment_my_information" />
</navigation>