<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:background="#ffffff"
    tools:context=".LoginActivity">

    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/logo"
        android:scaleType="centerCrop"
        android:adjustViewBounds="true"
        android:maxHeight="200dp"
        android:layout_marginTop="80dp" />

    <EditText
        android:id="@+id/username_et"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:background="@drawable/login_editview"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:hint="@string/name_hint"
        android:gravity="center"
        android:textAlignment="center"
        android:maxLength="11"
        android:textSize="20sp"
        android:layout_marginTop="25dp"
        android:padding="10dp"
        android:autofillHints="" />

    <EditText
        android:id="@+id/password_et"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:background="@drawable/login_editview"
        android:gravity="center"
        android:drawablePadding="10dp"
        android:hint="@string/password_hint"
        android:inputType="textPassword"
        android:maxLength="15"
        android:textSize="20sp"
        android:layout_marginTop="15dp"
        android:padding="10dp"
        android:autofillHints="" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/register_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.3"
            app:layout_constraintVertical_bias="0.5"
            android:text="@string/register"
            android:textSize="18sp"
            android:translationX="-30dp"/>

        <CheckBox
            android:id="@+id/saveAccount_cb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.5"
            app:layout_constraintHorizontal_bias="0.5"
            android:typeface="monospace"
            android:translationX="30dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toEndOf="@id/saveAccount_cb"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.5"
            app:layout_constraintHorizontal_bias="0.01"
            android:text="@string/savePassWord"
            android:textSize="18sp"
            android:translationX="30dp"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <ImageButton
        android:id="@+id/login_btn"
        android:layout_width="143dp"
        android:layout_height="139dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/loginbutton"
        android:contentDescription=""
        android:focusable="true" />

</LinearLayout>