<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="335dp"
        android:layout_height="109dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.51"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.143">

        <ImageView
            android:id="@+id/user_image_my_info"
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:background="@drawable/user_image_editview_my_info"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.026"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@mipmap/ic_launcher" />

        <TextView
            android:id="@+id/user_name_my_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="User Name"
            android:textSize="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.14"
            app:layout_constraintStart_toEndOf="@+id/user_image_my_info"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.19999999" />

        <ImageView
            android:id="@+id/line_under_username_my_info"
            android:layout_width="210dp"
            android:layout_height="14dp"

            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.416"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/user_name_my_info"
            app:layout_constraintVertical_bias="0.0"
            app:srcCompat="@drawable/ic_line_80_2" />

        <TextView
            android:id="@+id/title_uid_my_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/uid_name_my_info"
            android:textSize="12dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.09"
            app:layout_constraintStart_toEndOf="@+id/user_image_my_info"
            app:layout_constraintTop_toBottomOf="@+id/line_under_username_my_info"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/user_id_my_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="xxxxxxxxxxx"
            android:textSize="12dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.1"
            app:layout_constraintStart_toEndOf="@+id/title_uid_my_info"
            app:layout_constraintTop_toBottomOf="@+id/line_under_username_my_info"
            app:layout_constraintVertical_bias="0.0" />

        <androidx.constraintlayout.widget.Barrier
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:barrierDirection="top"
            tools:layout_editor_absoluteX="248dp"
            tools:layout_editor_absoluteY="76dp" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="335dp"
        android:layout_height="450dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout"
        app:layout_constraintVertical_bias="0.53">

        <Button
            android:id="@+id/all_upload_music"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/color_btn_my_info"
            android:text="@string/all_upload_name_my_info"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.13"
            tools:layout_editor_absoluteX="0dp" />

        <Button
            android:id="@+id/set_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/color_btn_my_info"
            android:text="@string/set_info_name_my_info"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/all_upload_music"
            app:layout_constraintVertical_bias="0.0"
            tools:layout_editor_absoluteX="0dp" />

        <Button
            android:id="@+id/seting"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/color_btn_my_info"
            android:text="@string/setting_name_my_info"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/set_info"
            app:layout_constraintVertical_bias="0.0"
            tools:layout_editor_absoluteX="0dp" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>